# CATBOSS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/catboss/: __init__.py  cli.py  logger.py
src/catboss/io/: __init__.py  ms_reader.py  ms_writer.py
src/catboss/nimki/: __init__.py  core_functions.py  engine.py  setup_cpp.py
src/catboss/nimki/cpp/: data_collection.cpp  data_collection.h  gabor_fit.cpp  gabor_fit.h  nami_core.cpp  outlier_detection.cpp  outlier_detection.h  uv_calc.cpp  uv_calc.h
src/catboss/plotting/: __init__.py  bokeh_plots.py
src/catboss/pooh/: __init__.py  bandpass.py  engine.py  thresholds.py
src/catboss/pooh/methods/: __init__.py  base.py  iqr.py  mad.py  sumthreshold.py
src/catboss/utils/: __init__.py  gpu.py
tests/: __init__.py  test_catboss.py
